# ggnn

./: CMakeLists.txt
include/ggnn/: cuda_knn_ggnn.cuh  cuda_knn_ggnn_gpu_instance.cuh
include/ggnn/utils/: cuda_knn_ggnn_results.cuh
include/io/: loader_ann.hpp
src/: deep.cu  sift.cu  spacev.cu
